--- a/package.json
+++ b/package.json
@@ -1,12 +1,11 @@
 {
-  "name": "akc-autoparts",
+  "name": "hyundai-parts",
   "version": "1.0.0",
-  "main": "api/index.js",
+  "main": "backend/server.js",
   "scripts": {
-    "start": "node api/index.js"
+    "start": "node backend/server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "ejs": "^3.1.9"
+    "express": "^4.18.2"
   }
 }
