--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
-  "name": "hyundai-parts",
+  "name": "akc-autoparts",
   "version": "1.0.0",
-  "main": "backend/server.js",
   "scripts": {
     "start": "node backend/server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "cookie-parser": "^1.4.7",
+    "ejs": "^3.1.9",
+    "express": "^4.19.0",
+    "express-session": "^1.17.3",
+    "mongoose": "^8.0.0",
+    "node-fetch": "^2.7.0"
   }
 }
