--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "akc-autoparts",
+  "name": "akc-autoparts-backend",
   "version": "1.0.0",
+  "main": "backend/server.js",
   "scripts": {
     "start": "node backend/server.js"
   },
   "dependencies": {
+    "body-parser": "^2.2.1",
     "cookie-parser": "^1.4.7",
-    "ejs": "^3.1.9",
-    "express": "^4.19.0",
-    "express-session": "^1.17.3",
-    "mongoose": "^8.0.0",
-    "node-fetch": "^2.7.0"
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
+    "ejs": "^3.1.10",
+    "express": "^5.2.1",
+    "express-session": "^1.18.2",
+    "googleapis": "^167.0.0",
+    "mongoose": "^9.0.1",
+    "morgan": "^1.10.1",
+    "path": "^0.12.7"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
